add files in project

--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -749,7 +749,56 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Octagon\assets\bootstrap\css\bootstrap.min.css" />
+    <Content Include="Octagon\assets\bootstrap\dist\css\bootstrap-theme.css" />
+    <Content Include="Octagon\assets\bootstrap\dist\css\bootstrap-theme.min.css" />
+    <Content Include="Octagon\assets\bootstrap\dist\css\bootstrap.css" />
+    <Content Include="Octagon\assets\bootstrap\dist\css\bootstrap.min.css" />
+    <Content Include="Octagon\assets\bootstrap\dist\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Octagon\assets\bootstrap\dist\js\bootstrap.js" />
+    <Content Include="Octagon\assets\bootstrap\dist\js\bootstrap.min.js" />
+    <Content Include="Octagon\assets\bootstrap\dist\js\npm.js" />
+    <Content Include="Octagon\assets\bootstrap\fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Octagon\assets\bootstrap\js\affix.js" />
+    <Content Include="Octagon\assets\bootstrap\js\alert.js" />
     <Content Include="Octagon\assets\bootstrap\js\bootstrap.min.js" />
+    <Content Include="Octagon\assets\bootstrap\js\button.js" />
+    <Content Include="Octagon\assets\bootstrap\js\carousel.js" />
+    <Content Include="Octagon\assets\bootstrap\js\collapse.js" />
+    <Content Include="Octagon\assets\bootstrap\js\dropdown.js" />
+    <Content Include="Octagon\assets\bootstrap\js\modal.js" />
+    <Content Include="Octagon\assets\bootstrap\js\popover.js" />
+    <Content Include="Octagon\assets\bootstrap\js\scrollspy.js" />
+    <Content Include="Octagon\assets\bootstrap\js\tab.js" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\index.html" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\unit\affix.js" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\unit\alert.js" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\unit\button.js" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\unit\carousel.js" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\unit\collapse.js" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\unit\dropdown.js" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\unit\modal.js" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\unit\phantom.js" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\unit\popover.js" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\unit\scrollspy.js" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\unit\tab.js" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\unit\tooltip.js" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\vendor\jquery.min.js" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\vendor\qunit.css" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\vendor\qunit.js" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\visual\affix-with-sticky-footer.html" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\visual\affix.html" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\visual\alert.html" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\visual\button.html" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\visual\carousel.html" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\visual\collapse.html" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\visual\dropdown.html" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\visual\modal.html" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\visual\popover.html" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\visual\scrollspy.html" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\visual\tab.html" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\visual\tooltip.html" />
+    <Content Include="Octagon\assets\bootstrap\js\tooltip.js" />
+    <Content Include="Octagon\assets\bootstrap\js\transition.js" />
     <Content Include="Octagon\assets\css\bootstrap.css" />
     <Content Include="Octagon\assets\css\bootstrap.min.css" />
     <Content Include="Octagon\assets\css\Contact-Form-Clean.css" />
@@ -1027,6 +1076,95 @@
     <Content Include="Content\DataTables\css\mixins.scss" />
     <Content Include="Content\DataTables\css\common.scss" />
     <Content Include="Grid.mvc.readme" />
+    <Content Include="Octagon\assets\bootstrap\dist\css\bootstrap-theme.css.map" />
+    <Content Include="Octagon\assets\bootstrap\dist\css\bootstrap-theme.min.css.map" />
+    <Content Include="Octagon\assets\bootstrap\dist\css\bootstrap.css.map" />
+    <Content Include="Octagon\assets\bootstrap\dist\css\bootstrap.min.css.map" />
+    <Content Include="Octagon\assets\bootstrap\dist\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Octagon\assets\bootstrap\dist\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Octagon\assets\bootstrap\dist\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Octagon\assets\bootstrap\dist\fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="Octagon\assets\bootstrap\js\.jscsrc" />
+    <Content Include="Octagon\assets\bootstrap\js\.jshintrc" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\README.md" />
+    <Content Include="Octagon\assets\bootstrap\js\tests\unit\.jshintrc" />
+    <Content Include="Octagon\assets\bootstrap\fonts\glyphicons-halflings-regular.eot" />
+    <Content Include="Octagon\assets\bootstrap\fonts\glyphicons-halflings-regular.ttf" />
+    <Content Include="Octagon\assets\bootstrap\fonts\glyphicons-halflings-regular.woff" />
+    <Content Include="Octagon\assets\bootstrap\fonts\glyphicons-halflings-regular.woff2" />
+    <Content Include="Octagon\assets\bootstrap\less\.csscomb.json" />
+    <Content Include="Octagon\assets\bootstrap\less\.csslintrc" />
+    <Content Include="Octagon\assets\bootstrap\less\alerts.less" />
+    <Content Include="Octagon\assets\bootstrap\less\badges.less" />
+    <Content Include="Octagon\assets\bootstrap\less\bootstrap.less" />
+    <Content Include="Octagon\assets\bootstrap\less\breadcrumbs.less" />
+    <Content Include="Octagon\assets\bootstrap\less\button-groups.less" />
+    <Content Include="Octagon\assets\bootstrap\less\buttons.less" />
+    <Content Include="Octagon\assets\bootstrap\less\carousel.less" />
+    <Content Include="Octagon\assets\bootstrap\less\close.less" />
+    <Content Include="Octagon\assets\bootstrap\less\code.less" />
+    <Content Include="Octagon\assets\bootstrap\less\component-animations.less" />
+    <Content Include="Octagon\assets\bootstrap\less\dropdowns.less" />
+    <Content Include="Octagon\assets\bootstrap\less\forms.less" />
+    <Content Include="Octagon\assets\bootstrap\less\glyphicons.less" />
+    <Content Include="Octagon\assets\bootstrap\less\grid.less" />
+    <Content Include="Octagon\assets\bootstrap\less\input-groups.less" />
+    <Content Include="Octagon\assets\bootstrap\less\jumbotron.less" />
+    <Content Include="Octagon\assets\bootstrap\less\labels.less" />
+    <Content Include="Octagon\assets\bootstrap\less\list-group.less" />
+    <Content Include="Octagon\assets\bootstrap\less\media.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\alerts.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\background-variant.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\border-radius.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\buttons.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\center-block.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\clearfix.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\forms.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\gradients.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\grid-framework.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\grid.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\hide-text.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\image.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\labels.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\list-group.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\nav-divider.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\nav-vertical-align.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\opacity.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\pagination.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\panels.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\progress-bar.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\reset-filter.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\reset-text.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\resize.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\responsive-visibility.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\size.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\tab-focus.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\table-row.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\text-emphasis.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\text-overflow.less" />
+    <Content Include="Octagon\assets\bootstrap\less\mixins\vendor-prefixes.less" />
+    <Content Include="Octagon\assets\bootstrap\less\modals.less" />
+    <Content Include="Octagon\assets\bootstrap\less\navbar.less" />
+    <Content Include="Octagon\assets\bootstrap\less\navs.less" />
+    <Content Include="Octagon\assets\bootstrap\less\normalize.less" />
+    <Content Include="Octagon\assets\bootstrap\less\pager.less" />
+    <Content Include="Octagon\assets\bootstrap\less\pagination.less" />
+    <Content Include="Octagon\assets\bootstrap\less\panels.less" />
+    <Content Include="Octagon\assets\bootstrap\less\popovers.less" />
+    <Content Include="Octagon\assets\bootstrap\less\print.less" />
+    <Content Include="Octagon\assets\bootstrap\less\progress-bars.less" />
+    <Content Include="Octagon\assets\bootstrap\less\responsive-embed.less" />
+    <Content Include="Octagon\assets\bootstrap\less\responsive-utilities.less" />
+    <Content Include="Octagon\assets\bootstrap\less\scaffolding.less" />
+    <Content Include="Octagon\assets\bootstrap\less\tables.less" />
+    <Content Include="Octagon\assets\bootstrap\less\theme.less" />
+    <Content Include="Octagon\assets\bootstrap\less\thumbnails.less" />
+    <Content Include="Octagon\assets\bootstrap\less\tooltip.less" />
+    <Content Include="Octagon\assets\bootstrap\less\type.less" />
+    <Content Include="Octagon\assets\bootstrap\less\utilities.less" />
+    <Content Include="Octagon\assets\bootstrap\less\variables.less" />
+    <Content Include="Octagon\assets\bootstrap\less\wells.less" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.min.js" />
