--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -628,6 +628,7 @@
     <Content Include="Content\DataTables\css\dataTables.jqueryui.min.css" />
     <Content Include="Content\DataTables\css\dataTables.material.css" />
     <Content Include="Content\DataTables\css\dataTables.material.min.css" />
+    <Content Include="Content\DataTables\css\datatables.min.css" />
     <Content Include="Content\DataTables\css\dataTables.semanticui.css" />
     <Content Include="Content\DataTables\css\dataTables.semanticui.min.css" />
     <Content Include="Content\DataTables\css\dataTables.uikit.css" />
@@ -702,6 +703,15 @@
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\Gridmvc.css" />
+    <Content Include="Content\quicksearch\.gitignore" />
+    <Content Include="Content\quicksearch\dist\jquery.quicksearch.js" />
+    <Content Include="Content\quicksearch\dist\jquery.quicksearch.min.js" />
+    <Content Include="Content\quicksearch\examples\index.html" />
+    <Content Include="Content\quicksearch\examples\loader.gif" />
+    <Content Include="Content\quicksearch\examples\style.css" />
+    <Content Include="Content\quicksearch\examples\super_table.html" />
+    <Content Include="Content\quicksearch\Gruntfile.js" />
+    <Content Include="Content\quicksearch\src\jquery.quicksearch.js" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
@@ -920,9 +930,47 @@
     <Content Include="Octagon\assets\vendor\flot\jquery.flot.time.js" />
     <Content Include="Octagon\assets\vendor\flot\jquery.js" />
     <Content Include="Octagon\assets\vendor\font-awesome\css\font-awesome.css" />
+    <Content Include="Octagon\assets\vendor\font-awesome\css\font-awesome.css.map" />
     <Content Include="Octagon\assets\vendor\font-awesome\css\font-awesome.min.css" />
+    <Content Include="Octagon\assets\vendor\font-awesome\fonts\fontawesome-webfont.eot" />
     <Content Include="Octagon\assets\vendor\font-awesome\fonts\fontawesome-webfont.svg" />
+    <Content Include="Octagon\assets\vendor\font-awesome\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Octagon\assets\vendor\font-awesome\fonts\fontawesome-webfont.woff" />
+    <Content Include="Octagon\assets\vendor\font-awesome\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Octagon\assets\vendor\font-awesome\fonts\FontAwesome.otf" />
     <Content Include="Octagon\assets\vendor\font-awesome\HELP-US-OUT.txt" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\animated.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\bordered-pulled.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\core.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\extras.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\fixed-width.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\font-awesome.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\icons.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\larger.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\list.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\mixins.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\path.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\rotated-flipped.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\screen-reader.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\spinning.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\stacked.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\less\variables.less" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\font-awesome.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_animated.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_bordered-pulled.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_core.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_extras.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_fixed-width.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_icons.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_larger.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_list.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_mixins.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_path.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_rotated-flipped.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_screen-reader.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_spinning.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_stacked.scss" />
+    <Content Include="Octagon\assets\vendor\font-awesome\scss\_variables.scss" />
     <Content Include="Octagon\assets\vendor\jquery\jquery.js" />
     <Content Include="Octagon\assets\vendor\jquery\jquery.min.js" />
     <Content Include="Octagon\assets\vendor\metisMenu\metisMenu.css" />
@@ -1035,44 +1083,6 @@
     <Content Include="Octagon\assets\vendor\bootstrap\fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="Octagon\assets\vendor\datatables-responsive\dataTables.responsive.scss" />
     <Content Include="Octagon\assets\vendor\datatables\images\Sorting icons.psd" />
-    <Content Include="Octagon\assets\vendor\font-awesome\css\font-awesome.css.map" />
-    <Content Include="Octagon\assets\vendor\font-awesome\fonts\fontawesome-webfont.eot" />
-    <Content Include="Octagon\assets\vendor\font-awesome\fonts\fontawesome-webfont.ttf" />
-    <Content Include="Octagon\assets\vendor\font-awesome\fonts\fontawesome-webfont.woff" />
-    <Content Include="Octagon\assets\vendor\font-awesome\fonts\fontawesome-webfont.woff2" />
-    <Content Include="Octagon\assets\vendor\font-awesome\fonts\FontAwesome.otf" />
-    <Content Include="Octagon\assets\vendor\font-awesome\less\animated.less" />
-    <Content Include="Octagon\assets\vendor\font-awesome\less\bordered-pulled.less" />
-    <Content Include="Octagon\assets\vendor\font-awesome\less\core.less" />
-    <Content Include="Octagon\assets\vendor\font-awesome\less\extras.less" />
-    <Content Include="Octagon\assets\vendor\font-awesome\less\fixed-width.less" />
-    <Content Include="Octagon\assets\vendor\font-awesome\less\font-awesome.less" />
-    <Content Include="Octagon\assets\vendor\font-awesome\less\icons.less" />
-    <Content Include="Octagon\assets\vendor\font-awesome\less\larger.less" />
-    <Content Include="Octagon\assets\vendor\font-awesome\less\list.less" />
-    <Content Include="Octagon\assets\vendor\font-awesome\less\mixins.less" />
-    <Content Include="Octagon\assets\vendor\font-awesome\less\path.less" />
-    <Content Include="Octagon\assets\vendor\font-awesome\less\rotated-flipped.less" />
-    <Content Include="Octagon\assets\vendor\font-awesome\less\screen-reader.less" />
-    <Content Include="Octagon\assets\vendor\font-awesome\less\spinning.less" />
-    <Content Include="Octagon\assets\vendor\font-awesome\less\stacked.less" />
-    <Content Include="Octagon\assets\vendor\font-awesome\less\variables.less" />
-    <Content Include="Octagon\assets\vendor\font-awesome\scss\font-awesome.scss" />
-    <Content Include="Octagon\assets\vendor\font-awesome\scss\_animated.scss" />
-    <Content Include="Octagon\assets\vendor\font-awesome\scss\_bordered-pulled.scss" />
-    <Content Include="Octagon\assets\vendor\font-awesome\scss\_core.scss" />
-    <Content Include="Octagon\assets\vendor\font-awesome\scss\_extras.scss" />
-    <Content Include="Octagon\assets\vendor\font-awesome\scss\_fixed-width.scss" />
-    <Content Include="Octagon\assets\vendor\font-awesome\scss\_icons.scss" />
-    <Content Include="Octagon\assets\vendor\font-awesome\scss\_larger.scss" />
-    <Content Include="Octagon\assets\vendor\font-awesome\scss\_list.scss" />
-    <Content Include="Octagon\assets\vendor\font-awesome\scss\_mixins.scss" />
-    <Content Include="Octagon\assets\vendor\font-awesome\scss\_path.scss" />
-    <Content Include="Octagon\assets\vendor\font-awesome\scss\_rotated-flipped.scss" />
-    <Content Include="Octagon\assets\vendor\font-awesome\scss\_screen-reader.scss" />
-    <Content Include="Octagon\assets\vendor\font-awesome\scss\_spinning.scss" />
-    <Content Include="Octagon\assets\vendor\font-awesome\scss\_stacked.scss" />
-    <Content Include="Octagon\assets\vendor\font-awesome\scss\_variables.scss" />
     <Content Include="Content\DataTables\css\mixins.scss" />
     <Content Include="Content\DataTables\css\common.scss" />
     <Content Include="Grid.mvc.readme" />
@@ -1165,6 +1175,13 @@
     <Content Include="Octagon\assets\bootstrap\less\utilities.less" />
     <Content Include="Octagon\assets\bootstrap\less\variables.less" />
     <Content Include="Octagon\assets\bootstrap\less\wells.less" />
+    <Content Include="Content\quicksearch\bower.json" />
+    <Content Include="Content\quicksearch\dist\jquery.quicksearch.min.js.map" />
+    <Content Include="Content\quicksearch\examples\example.json" />
+    <Content Include="Content\quicksearch\jquery.quicksearch.jquery.json" />
+    <Content Include="Content\quicksearch\LICENSE" />
+    <Content Include="Content\quicksearch\package.json" />
+    <Content Include="Content\quicksearch\README.md" />
     <None Include="Scripts\jquery-3.1.1.intellisense.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.js" />
     <Content Include="Scripts\DataTables\autoFill.bootstrap.min.js" />
