--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -372,19 +372,19 @@
     <Compile Include="Models\FormsViewModels\BAccountFVModel.cs" />
     <Compile Include="Models\FormsViewModels\BAEditFVModel.cs" />
     <Compile Include="Models\FormsViewModels\BindKeyViewModel.cs" />
-    <Compile Include="Models\FormsViewModels\CashBalanceAtCloseVM.cs" />
+    <Compile Include="Models\FormsViewModels\CashBalanceatCloseViewModel.cs" />
     <Compile Include="Models\FormsViewModels\ScheduleViewModel.cs" />
     <Compile Include="Models\FormsViewModels\TerminalContactVM.cs" />
     <Compile Include="Models\FormsViewModels\TerminalInterchangeVM.cs" />
     <Compile Include="Models\FormsViewModels\TerminalVaultCashVM.cs" />
-    <Compile Include="Models\FormsViewModels\TransMonthlyViewModel.cs" />
+    <Compile Include="Models\FormsViewModels\MonthlyTransactionSummaryViewModel.cs" />
     <Compile Include="Models\FormsViewModels\TerminalCassetteVM.cs" />
     <Compile Include="Models\FormsViewModels\TerminalDocumentsVM.cs" />
     <Compile Include="Models\FormsViewModels\TerminalNotesVM.cs" />
     <Compile Include="Models\FormsViewModels\TerminalPicturesVM.cs" />
-    <Compile Include="Models\FormsViewModels\TransDailyViewModel.cs" />
-    <Compile Include="Models\FormsViewModels\TerminalStatusFormFilterVM.cs" />
-    <Compile Include="Models\FormsViewModels\CashManagementVM.cs" />
+    <Compile Include="Models\FormsViewModels\DailyTransactionSummaryViewModel.cs" />
+    <Compile Include="Models\FormsViewModels\TerminalStatusViewModel.cs" />
+    <Compile Include="Models\FormsViewModels\CashManagementViewModel.cs" />
     <Compile Include="Models\FormsViewModels\CashLoadViewModel.cs" />
     <Compile Include="Models\FormsViewModels\DisputeRepresentVM.cs" />
     <Compile Include="Models\FormsViewModels\DisputeViewModel.cs" />
